feat: remove local uploading to presigned s3 upload workflow
