# backend/app.js
@@ -1,9 +1,7 @@
 const express = require('express');
 const authRoutes = require('./routes/auth.routes');
-const uploadRoutes = require('./routes/upload.routes');
 const sessionsRoutes = require('./routes/sessions.routes');
 const mlRoutes = require('./routes/ml.routes');
-const uploadSessionRoutes = require('./routes/uploadSession.routes');
 const setupSwagger = require('./swagger');
 const cors = require("cors");
 
@@ -19,9 +17,7 @@ app.get('/health', (req, res) => {
 
 
 app.use('/auth', authRoutes);
-app.use('/upload', uploadRoutes);
-app.use('/sessions', sessionsRoutes);
+app.use(sessionsRoutes);
 app.use('/ml', mlRoutes);
-app.use('/upload-sessions', uploadSessionRoutes)
 
 module.exports = app;
